# Batch-Opt-Highway-Driving

./: .gitignore  README.md
Suplementary Material/: Readme_suplementary.md
ros_ws/: README.md  Readme.md
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/frenet_car/lib/frenet_car/: frenet_node
ros_ws/install/frenet_car/share/frenet_car/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/highway_car/lib/highway_car/: highway_node2
ros_ws/install/highway_car/share/highway_car/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/mpc_car_acado/lib/mpc_car_acado/: mpc_node
ros_ws/install/mpc_car_acado/share/mpc_car_acado/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/mpc_car_acado/share/mpc_car_acado/cmake/: ament_cmake_export_include_directories-extras.cmake  mpc_car_acadoConfig.cmake
ros_ws/install/mpc_car_acado_single/lib/mpc_car_acado_single/: mpc_node_single
ros_ws/install/mpc_car_acado_single/share/mpc_car_acado_single/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/mpc_car_acado_single/share/mpc_car_acado_single/cmake/: ament_cmake_export_include_directories-extras.cmake
ros_ws/install/mpc_car_batch/share/mpc_car_batch/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/msgs_car/include/msgs_car/msg/: controls.h  controls.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
ros_ws/install/msgs_car/share/msgs_car/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/msgs_car/share/msgs_car/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  msgs_car__rosidl_typesupport_cExport.cmake  msgs_car__rosidl_typesupport_cppExport-noconfig.cmake  msgs_car__rosidl_typesupport_cppExport.cmake  msgs_car__rosidl_typesupport_introspection_cExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ros_ws/install/msgs_car/share/msgs_car/msg/: Controls.idl  Controls.msg
ros_ws/log/: latest_build
ros_ws/src/frenet_car/: config.yaml  package.xml  setup.cfg  setup.py
ros_ws/src/frenet_car/frenet_car/: frenet.py  optimize_lane.py
ros_ws/src/frenet_cpp/: CMakeLists.txt  config.yaml  package.xml
ros_ws/src/frenet_cpp/src/: cubic_spline_planner.cpp  frenet_car.cpp  frenet_main.cpp  frenet_optimal_trajectory.cpp
ros_ws/src/highway_car/: config.yaml  setup.cfg  setup.py
ros_ws/src/highway_car/highway_car/: config.yaml  highway_car2.py
ros_ws/src/mpc_car_acado/: CMakeLists.txt  config.yaml
ros_ws/src/mpc_car_acado/model/codegen/: acado_common.h  acado_integrator.c  acado_qpoases_interface.hpp  acado_solver.c
ros_ws/src/mpc_car_acado/src/: code_gen.cpp  main_acado.cpp
ros_ws/src/mpc_car_acado_single/: CMakeLists.txt  config.yaml
ros_ws/src/mpc_car_acado_single/model/codegen/: acado_common.h  acado_qpoases_interface.cpp  acado_solver.c
ros_ws/src/mpc_car_acado_single/src/: config.yaml  getting_started.cpp  main_acado.cpp
ros_ws/src/mpc_car_batch/: CMakeLists.txt  config.yaml
ros_ws/src/mpc_car_batch/include/mpc_car_batch/: optim_batch.h
ros_ws/src/mpc_car_batch/install/: local_setup.sh  setup.sh
ros_ws/src/mpc_car_batch/install/mpc_car_batch/share/mpc_car_batch/: local_setup.dsv  local_setup.sh  package.sh
ros_ws/src/mpc_car_batch/install/mpc_car_batch/share/mpc_car_batch/cmake/: mpc_car_batchConfig.cmake
ros_ws/src/mpc_car_batch/log/: latest_build
ros_ws/src/mpc_car_batch/src/: main_batch.cpp  optim_batch.cpp
ros_ws/src/msgs_car/: CMakeLists.txt
ros_ws/stats/: batch.txt  box_plot.py  data  data.mat  frenet.txt  test.py
ros_ws/stats/New/BatchSize/No-Time-Budget/: box_plot.py
ros_ws/stats/New/BatchSize/No-Time-Budget/Copy/: mpc_car_acado_10_goals.txt  mpc_car_acado_12_goals.txt  mpc_car_acado_14_goals.txt  mpc_car_acado_16_goals.txt  mpc_car_acado_20_goals.txt  mpc_car_acado_2_goals.txt  mpc_car_acado_4_goals.txt  mpc_car_acado_6_goals.txt  mpc_car_acado_8_goals.txt  mpc_car_batch_data_10_goals.txt  mpc_car_batch_data_12_goals.txt  mpc_car_batch_data_14_goals.txt  mpc_car_batch_data_16_goals.txt  mpc_car_batch_data_20_goals.txt  mpc_car_batch_data_2_goals.txt  mpc_car_batch_data_4_goals.txt  mpc_car_batch_data_6_goals.txt  mpc_car_batch_data_8_goals.txt
ros_ws/stats/New/Cruise/No-Time-Budget/: box_plot.py  car_frenet_data.txt  mpc_car_acado_data_11_goals.txt  mpc_car_acado_data_1_goals.txt  mpc_car_acado_data_6_goals.txt  mpc_car_batch_data_11_goals.txt
ros_ws/stats/New/Cruise/No-Time-Budget/Copy/: car_frenet_data.txt  mpc_car_acado_data_11_goals.txt  mpc_car_acado_data_1_goals.txt  mpc_car_acado_data_6_goals.txt  mpc_car_batch_data_11_goals.txt
ros_ws/stats/New/HighSpeed_RightLane/No-Time-Budget/: box_plot.py  car_frenet_data.txt  mpc_car_acado_data_1_goals.txt  mpc_car_acado_data_6_goals.txt  mpc_car_batch_data_11_goals.txt
ros_ws/stats/New/HighSpeed_RightLane/No-Time-Budget/Copy/: car_frenet_data.txt  (+4 more)
ros_ws/stats/New/Residual Plots/: plot.py  res_bounds_optim.txt  res_nonhol_optim.txt
ros_ws/stats/New/RightLane/No-Time-Budget/: box_plot.py  car_frenet_data.txt  mpc_car_acado_data_11_goals.txt  mpc_car_acado_data_1_goals.txt  mpc_car_batch_data_11_goals.txt
ros_ws/stats/New/RightLane/Time-Budget/: box_plot.py
ros_ws/stats/Recent Compare/Cruisie/No-Time-Budget/: box_plot.py  mpc_car_acado_data_11_goals.txt
ros_ws/stats/Recent Compare/Cruisie/Time-Budget/: box_plot.py  mpc_car_acado_data_6_goals.txt  mpc_car_batch_data_11_goals.txt
ros_ws/stats/Recent Compare/HighSpeed_RightLane/No-Time-Budget/: box_plot.py
ros_ws/stats/Recent Compare/HighSpeed_RightLane/Time-Budget/: mpc_car_acado_data_11_goals.txt  mpc_car_acado_data_6_goals.txt  mpc_car_batch_data_11_goals.txt
(+47 files in other folders)
